Update for week 5
math116.py includes Chinese Remainder Theorem now.
The documentation Jupyter notebook includes several examples of its
usage.

--- a/math116.py documentation and examples.ipynb
+++ b/math116.py documentation and examples.ipynb
@@ -494,9 +494,353 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5d5756f-8991-4368-9554-c1c01a62af56",
+   "metadata": {},
+   "source": [
+    "## Solving systems of congruences: the Chinese Remainder Theorem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "179b74ab-3b9b-41e0-b1cf-ef0ec72f6c55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math116 import crt, crt_basic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5f2b4c3e-10ff-426e-be4c-fa2ef8a12571",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function crt_basic in module math116:\n",
+      "\n",
+      "crt_basic(a1, a2, m1, m2)\n",
+      "    Performs the Chinese Remainder Theorem on a system of TWO congruences\n",
+      "    \n",
+      "    This function ONLY WORKS with a system of two congruences, and only works \n",
+      "    if the two moduli m1 and m2 are coprime. In that case, the modulus of the \n",
+      "    result should just be m1 * m2, so this function doesn't bother returning \n",
+      "    that modulus. It just computes and returns a residue x that is congruent to \n",
+      "    a1 modulo m1 and is congruent to a2 modulo m2. \n",
+      "    \n",
+      "    This will raise ValueError if the moduli m1 and m2 are not relatively prime.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Do the basic Chinese Remainder Theorem, on two congruences, with coprime moduli\n",
+    "help(crt_basic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1f97c0d3-9883-4f55-83b6-dcca25fe1b54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crt_basic(3, 5, 11, 15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5a158b3-833c-42c4-92f4-11786982d4fa",
+   "metadata": {},
+   "source": [
+    "The above means that $\\begin{cases} x \\equiv 3 \\pmod{11} \\\\ x \\equiv 5 \\pmod{15} \\end{cases} \\qquad \\iff \\qquad x \\equiv 80 \\pmod{165}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3b26ba15-16fd-4018-b887-29f0f88c80e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "10 and 15 are not coprime",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# The following fails because 10 and 15 are not coprime, even though the system has a solution\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mcrt_basic\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Home/Teaching/UCLA/2024-01 (Winter) Math 116/Computer materials/Binder/math116.py:182\u001b[0m, in \u001b[0;36mcrt_basic\u001b[0;34m(a1, a2, m1, m2)\u001b[0m\n\u001b[1;32m    180\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m g \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m    181\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (a1 \u001b[38;5;241m*\u001b[39m m2 \u001b[38;5;241m*\u001b[39m i2 \u001b[38;5;241m+\u001b[39m a2 \u001b[38;5;241m*\u001b[39m m1 \u001b[38;5;241m*\u001b[39m i1) \u001b[38;5;241m%\u001b[39m (m1 \u001b[38;5;241m*\u001b[39m m2)\n\u001b[0;32m--> 182\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mm1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m and \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mm2\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m are not coprime\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: 10 and 15 are not coprime"
+     ]
+    }
+   ],
+   "source": [
+    "# The following fails because 10 and 15 are not coprime, even though the system has a solution\n",
+    "crt_basic(3, 8, 10, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "95ec27e3-d3d0-41da-b87c-0ab92e2a045c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function crt in module math116:\n",
+      "\n",
+      "crt(residues, moduli)\n",
+      "    Performs the Chinese Remainder Theorem\n",
+      "    \n",
+      "    Returns a pair (x, n) where n is the product of the moduli in the second \n",
+      "    argument, and x is congruent to each residue in the first argument modulo \n",
+      "    the corresponding modulus from the second argument. \n",
+      "    \n",
+      "    Note that if you have the residues and moduli already paired off, you can \n",
+      "    just \"un-pair\" them with zip, e.g.: \n",
+      "        crt(*zip((2, 5), (4, 7), (1, 11))) # returns (67, 385)\n",
+      "    \n",
+      "    This will raise ValueError if the moduli are not pairwise relatively prime.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A slightly fancier version of the CRT, that handles more than two congruences\n",
+    "help(crt)\n",
+    "# If you look at the source code for this, you might notice that it implements \n",
+    "# the algorithm exactly as described in problem 7 from Homework 4. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "169bec77-b2e4-4208-aa2c-91933320e8e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(67, 385)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crt([2, 4, 1], [5, 7, 11])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3d54528-9f37-4b84-82a4-3bb34efcf1a6",
+   "metadata": {},
+   "source": [
+    "The above means that $\\begin{cases} x \\equiv 2 \\pmod{5} \\\\ x \\equiv 4 \\pmod{7} \\\\ x \\equiv 1 \\pmod{11} \\end{cases} \\qquad \\iff \\qquad x \\equiv 67 \\pmod{385}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ef74ffba-b060-4826-bbe3-0edf4ec1c768",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(67, 385)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# As explained in the documentation, if you have the a_i's and m_i's already \n",
+    "# paired together, you can call crt with 'zip', as follows: \n",
+    "cong1 = (2, 5)    # 2 (mod 5)\n",
+    "cong2 = (4, 7)    # 4 (mod 7)\n",
+    "cong3 = (1, 11)   # 1 (mod 11)\n",
+    "crt(*zip(cong1, cong2, cong3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "47fa0dbc-46d6-453c-8c39-f53395c37036",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "2250 is not invertible modulo 12",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m cong2 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m28\u001b[39m, \u001b[38;5;241m50\u001b[39m)   \u001b[38;5;66;03m# 28 (mod 50)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m cong3 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m13\u001b[39m, \u001b[38;5;241m45\u001b[39m)   \u001b[38;5;66;03m# 13 (mod 45)\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[43mcrt\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mzip\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcong1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcong2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcong3\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Home/Teaching/UCLA/2024-01 (Winter) Math 116/Computer materials/Binder/math116.py:162\u001b[0m, in \u001b[0;36mcrt\u001b[0;34m(residues, moduli)\u001b[0m\n\u001b[1;32m    160\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m a, m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(residues, moduli):\n\u001b[1;32m    161\u001b[0m     y \u001b[38;5;241m=\u001b[39m bigmodulus \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m m\n\u001b[0;32m--> 162\u001b[0m     z \u001b[38;5;241m=\u001b[39m \u001b[43minverse\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# This will raise ValueError if y is not coprime to m\u001b[39;00m\n\u001b[1;32m    163\u001b[0m     bigresidue \u001b[38;5;241m=\u001b[39m (bigresidue \u001b[38;5;241m+\u001b[39m a\u001b[38;5;241m*\u001b[39my\u001b[38;5;241m*\u001b[39mz) \u001b[38;5;241m%\u001b[39m bigmodulus\n\u001b[1;32m    164\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m bigresidue, bigmodulus\n",
+      "File \u001b[0;32m~/Home/Teaching/UCLA/2024-01 (Winter) Math 116/Computer materials/Binder/math116.py:141\u001b[0m, in \u001b[0;36minverse\u001b[0;34m(a, n)\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m d \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m    140\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m%\u001b[39m n\n\u001b[0;32m--> 141\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m is not invertible modulo \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(a, n))\n",
+      "\u001b[0;31mValueError\u001b[0m: 2250 is not invertible modulo 12"
+     ]
+    }
+   ],
+   "source": [
+    "# The following will fail since the moduli are not pairwise coprime, even though \n",
+    "# the system of congruences does have a solution. \n",
+    "cong1 = (4, 12)    # 4 (mod 12)\n",
+    "cong2 = (28, 50)   # 28 (mod 50)\n",
+    "cong3 = (13, 45)   # 13 (mod 45)\n",
+    "crt(*zip(cong1, cong2, cong3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2edcb548-b9c0-4e7d-9fec-a534866a7fd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math116 import crt_general"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "13cc32da-b542-4a6b-808c-4d71968e2dae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function crt_general in module math116:\n",
+      "\n",
+      "crt_general(residues, moduli)\n",
+      "    Performs the Chinese Remainder Theorem\n",
+      "    \n",
+      "    Returns a pair (x, n) where n is the least common multiple of the moduli in \n",
+      "    the second argument, and x is congruent to each residue in the first \n",
+      "    argument modulo the corresponding modulus from the second argument. \n",
+      "    \n",
+      "    Note that if you have the residues and moduli already paired off, you can \n",
+      "    just \"un-pair\" them with zip, e.g.: \n",
+      "        crt_general(*zip((2, 5), (4, 7), (1, 11))) # returns (67, 385)\n",
+      "    \n",
+      "    This version works even if the moduli are not pairwise relatively prime, if \n",
+      "    there is a solution. It will raise ValueError if there is no solution.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If you want to solve systems with non-coprime moduli, you can use crt_general\n",
+    "help(crt_general)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cfd903dd-4847-41b8-8552-94f230f3df22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23, 30)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The example above that failed with 'crt_basic'\n",
+    "crt_general((3, 8), (10, 15))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "640a3d3f-7462-497a-9a71-576f70d99e56",
+   "metadata": {},
+   "source": [
+    "The above means that $\\begin{cases} x \\equiv 3 \\pmod{10} \\\\ x \\equiv 8 \\pmod{15} \\end{cases} \\qquad \\iff \\qquad x \\equiv 23 \\pmod{30}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0a7e4cdc-1b9d-4fbf-bd55-047a10077895",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "No solution to this system of congruences",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# But the following fails because there actually is no solution\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mcrt_general\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Home/Teaching/UCLA/2024-01 (Winter) Math 116/Computer materials/Binder/math116.py:207\u001b[0m, in \u001b[0;36mcrt_general\u001b[0;34m(residues, moduli)\u001b[0m\n\u001b[1;32m    205\u001b[0m q2, r2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdivmod\u001b[39m(a2, g)\n\u001b[1;32m    206\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m r1 \u001b[38;5;241m!=\u001b[39m r2:\n\u001b[0;32m--> 207\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo solution to this system of congruences\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    208\u001b[0m new_m \u001b[38;5;241m=\u001b[39m m1 \u001b[38;5;241m*\u001b[39m m2 \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m g\n\u001b[1;32m    209\u001b[0m a1 \u001b[38;5;241m=\u001b[39m (q1 \u001b[38;5;241m*\u001b[39m m2 \u001b[38;5;241m*\u001b[39m i2 \u001b[38;5;241m+\u001b[39m q2 \u001b[38;5;241m*\u001b[39m m1 \u001b[38;5;241m*\u001b[39m i1 \u001b[38;5;241m+\u001b[39m r1) \u001b[38;5;241m%\u001b[39m new_m\n",
+      "\u001b[0;31mValueError\u001b[0m: No solution to this system of congruences"
+     ]
+    }
+   ],
+   "source": [
+    "# But the following fails because there actually is no solution\n",
+    "crt_general((3, 7), (10, 15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "93b116f5-95fd-4968-a29b-54fde89aba94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(328, 900)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The example above that failed with 'crt'\n",
+    "cong1 = (4, 12)    # 4 (mod 12)\n",
+    "cong2 = (28, 50)   # 28 (mod 50)\n",
+    "cong3 = (13, 45)   # 13 (mod 45)\n",
+    "crt_general(*zip(cong1, cong2, cong3))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "179b74ab-3b9b-41e0-b1cf-ef0ec72f6c55",
+   "id": "8923fb8d-9c13-437a-a4ee-6533bb75d893",
    "metadata": {},
    "outputs": [],
    "source": []
