Add pseudoprime and some other factoring functions
This also includes a Jupyter notebook walking students through the
Pohlig-Hellman algorithm step-by-step. But it doesn't include the actual
code for a pohlig_hellman function.

--- a/math116.py documentation and examples.ipynb
+++ b/math116.py documentation and examples.ipynb
@@ -932,9 +932,523 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c9b7991-985d-487c-bbe7-530e75a2d399",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "# Factoring and primality testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5da79b9-bee3-4ca4-a72e-bde28181d638",
+   "metadata": {},
+   "source": [
+    "## The Miller–Rabin strong pseudoprime test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8923fb8d-9c13-437a-a4ee-6533bb75d893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math116 import pseudoprime, is_probably_prime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d2f24c88-acdd-4d19-b1d8-5a64f622260c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function pseudoprime in module math116:\n",
+      "\n",
+      "pseudoprime(n, base)\n",
+      "    Perform the Miller–Rabin (strong pseudoprime) test on n\n",
+      "    \n",
+      "    Note that in some (rare) cases, the Miller–Rabin test can actually produce \n",
+      "    a non-trivial factorization of n, however this function does not return \n",
+      "    those factors. If you want to run this same algorithm, but obtain that \n",
+      "    factorization when possible, you can use the 'universal_exponent_factor' \n",
+      "    function in this library, and pass it n and n - 1. But note that it is \n",
+      "    likely to raise ValueError if n is not prime. See its documentation. \n",
+      "    \n",
+      "    Returns True or False\n",
+      "    If this returns True, n is either prime or a strong pseudoprime for 'base'. \n",
+      "    If this returns False, n is guaranteed to be composite.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(pseudoprime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "85836706-c571-4009-9830-a94b788181d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pseudoprime(251521, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "cfc201cb-06ed-4a55-b4ad-bad1560ee931",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 251521 appears to be prime, because it's a strong (Miller–Rabin) pseudoprime for base 5\n",
+    "# But... not for many other bases\n",
+    "pseudoprime(251521, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "94756684-4f61-4db3-b14b-6b4d127f9afd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pseudoprime(251521, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "de6f7577-b85a-4198-8008-57abffbd51b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pseudoprime(251521, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c8787d56-747c-44d6-9489-9d94fd893f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function is_probably_prime in module math116:\n",
+      "\n",
+      "is_probably_prime(n, bases=(2, 3, 5, 7, 11))\n",
+      "    Check if n is prime, by running Miller–Rabin test for several bases\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# is_probably_prime is a one-line function that just calls pseudoprime for several bases\n",
+    "help(is_probably_prime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "cffcfa76-2d9b-4c82-99b2-9f0b43c69b58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mis_probably_prime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbases\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m11\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mSource:\u001b[0m   \n",
+       "\u001b[0;32mdef\u001b[0m \u001b[0mis_probably_prime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbases\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m11\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0;34m\"Check if n is prime, by running Miller–Rabin test for several bases\"\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0;32mreturn\u001b[0m \u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpseudoprime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbase\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mbase\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbases\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/Home/Teaching/UCLA/2024-01 (Winter) Math 116/Computer materials/Binder/math116.py\n",
+       "\u001b[0;31mType:\u001b[0m      function"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Here's its full source code: return all(pseudoprime(n, base) for base in bases)\n",
+    "is_probably_prime??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f9497658-ddb1-446d-817a-d947617b9b7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = 722449162587487\n",
+    "is_probably_prime(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b2087c89-fbee-4a80-a447-5572928a0980",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = 929168008237529\n",
+    "is_probably_prime(q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0de77b84-0b91-4d37-b037-48152222ca48",
+   "metadata": {},
+   "source": [
+    "Both of the above numbers are apparently prime (or, at least, it's extremely likely they are). \n",
+    "\n",
+    "But if we multiply them, we get a number that's hard to factor by trial division (because it only has these two large prime factors). \n",
+    "\n",
+    "However, our primality-testing function should still tell us that it's not prime: \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "34f11672-6330-4d47-8142-5cfd60b3bb82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = p*q\n",
+    "is_probably_prime(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b9ca57e-322b-4cdb-b156-b0b4cc30ce77",
+   "metadata": {},
+   "source": [
+    "## Getting the complete factorization of a (small) number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "0ff9795b-378f-4d08-b3f7-32459e4daec9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math116 import factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9318e3b0-9847-4aa0-aca2-6d35b5311a23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function factor in module math116:\n",
+      "\n",
+      "factor(n)\n",
+      "    Returns the factorization of n by trial division, using the PRIMES list\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(factor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "5a16e7da-4a8a-4e2a-a24f-c40e7111b9a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({2: 3, 5: 3, 3: 1})"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factor(3000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83f0e6d1-6268-4203-88b5-f72db0afdd2d",
+   "metadata": {},
+   "source": [
+    "The `factor` function just does trial division, and only tries primes up to 4 digits ($< 10,000$). So don't expect to be able to use it to reliably factor any really large numbers. \n",
+    "\n",
+    "The nice thing about it, though, is that when it can factor the number, it actually gives a complete factorization of it, as a `Counter` object (like a Python dictionary). So the above result says that $3000 = 2^3 \\cdot 3^1 \\cdot 5^3$. \n",
+    "\n",
+    "This function will still work for a lot of random numbers that are in the 10-15 digit range. But it won't work for most random numbers that are much larger than that. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "ae1f47a9-ef75-4d40-b130-bfa66e5968cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({2: 9, 3: 3, 13: 1, 83: 1, 197: 1})"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factor(2938470912) # I just generated this by typing random digits, and it happens to work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e2a60c6-17f6-472f-83a8-92f8ba6e1e4d",
+   "metadata": {},
+   "source": [
+    "A positive side-effect of this function having a limit, though, is that it will fail gracefully if $n$ has any prime factors that are above this limit, rather than just running for a million years. It will raise a `ValueError` exception in this case. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "598c6a97-bd4c-42cc-82c7-afabab69ab22",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "n has a 'large' prime factor. Known factorization Counter({2: 5, 3: 2, 7: 2, 5: 1, 11: 1, 31: 1, 101: 1}). Remaining unfactored part 23553274379156591769681969107",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mfactor\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m57238153663297070418971354211881034720\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Home/Teaching/UCLA/2024-01 (Winter) Math 116/Computer materials/Binder/math116.py:292\u001b[0m, in \u001b[0;36mfactor\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m    290\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m    291\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 292\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mn has a \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlarge\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m prime factor. Known factorization \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    293\u001b[0m                      \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfactors\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Remaining unfactored part \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    294\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m factors\n",
+      "\u001b[0;31mValueError\u001b[0m: n has a 'large' prime factor. Known factorization Counter({2: 5, 3: 2, 7: 2, 5: 1, 11: 1, 31: 1, 101: 1}). Remaining unfactored part 23553274379156591769681969107"
+     ]
+    }
+   ],
+   "source": [
+    "factor(57238153663297070418971354211881034720)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8923fb8d-9c13-437a-a4ee-6533bb75d893",
+   "id": "789ff79a-0a6e-44bd-9d40-612747d67a74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_probably_prime(23553274379156591769681969107)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aff8d5d-3aef-438a-a235-e8d02d4a1cdf",
+   "metadata": {},
+   "source": [
+    "So in this example, there's some larger primes that still divide that big remaining factor..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efbc8b5c-2a49-4837-98ed-4c4f8a12da13",
+   "metadata": {},
+   "source": [
+    "## Other factoring algorithms\n",
+    "\n",
+    "The `math116` library now also includes functions for the “universal exponent” factoring algorithm (which is very similar to how Miller–Rabin works, but specifically looking for a factor, rather than testing primality) and the Pollard $p - 1$ factoring algorithm. You can play around with these yourself, but remember that they're both sort of “special purpose” factoring algorithms. Each one only works efficiently in special circumstances. \n",
+    "\n",
+    "Remember, of course, that there is no known efficient general-purpose factoring algorithm. The running time of all known general-purpose factoring algorithms increases exponentially with the length (number of digits, or number of bits) of the number that you're trying to factor. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2da22579-2ef0-45bd-be40-72077411da6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math116 import universal_exponent_factor, pollard_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "ccf07e24-da01-4d55-a047-1a48c04190ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function universal_exponent_factor in module math116:\n",
+      "\n",
+      "universal_exponent_factor(n, exponent, bases=(2, 3, 5, 7, 11))\n",
+      "    Factor 'n', given that 'exponent' is a universal exponent for n\n",
+      "    \n",
+      "    A universal exponent is a positive integer e for which \n",
+      "        b^e = 1 (mod n)\n",
+      "    for any b that is relatively prime to n. If n is prime, then e is a \n",
+      "    universal exponent for n iff e is a multiple of n - 1 (Fermat's Little \n",
+      "    Theorem for one direction, existence of primitive roots for the other). \n",
+      "    More generally, for any n, \\phi(n) is a universal exponent for n (Euler's \n",
+      "    Theorem). \n",
+      "    \n",
+      "    This algorithm is not guaranteed to produce a factorization of n, but it's \n",
+      "    very likely to. If it cannot find one, it will return None. In particular, \n",
+      "    providing this function with a number n, and n - 1 as the (supposed) \n",
+      "    universal exponent will do the equivalent of the Miller–Rabin (strong \n",
+      "    pseudoprime) test on n for the bases in 'bases'. In that case, if the \n",
+      "    function returns None, then the number is very very likely to be prime. \n",
+      "    (Note that when used this way, this function will most likely raise \n",
+      "    ValueError if n is not prime.) \n",
+      "    \n",
+      "    Returns a nontrivial factor of n, or None if it can't find one\n",
+      "    Raises ValueError if it is found that 'exponent' is not universal\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(universal_exponent_factor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "81ba593f-c393-43f2-9961-2381b18c4f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function pollard_factor in module math116:\n",
+      "\n",
+      "pollard_factor(n, bases=(2,), bound=100000)\n",
+      "    Runs the Pollard p - 1 factoring algorithm on n\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(pollard_factor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5493546-e1d9-4cfe-bb51-a0732d998c27",
    "metadata": {},
    "outputs": [],
    "source": []
